--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "mongodb": "^5.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
