--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,11 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "mongodb": "^5.6.0",
