--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "mongodb": "^5.6.0",
+    "socket.io": "^4.7.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
